test/Harper/Tests/Bad/issue023_conflMembDecls.har
value T = {
    variant A = {
        foo :: a -> a;
        foo :: b -> b;
    };
};